# cartclaude

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.serena/: project.yml
.serena/cache/rust/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  codebase_structure.md  development_guidelines.md  project_purpose.md  suggested_commands.md  task_completion_checklist.md  tech_stack.md
src/wasm/: Cargo.toml
src/wasm/src/: browser.rs  engine.rs  game.rs  lib.rs  sound.rs
src/wasm/src/game/: cart.rs  music.rs  ornament.rs  rival_cart.rs  wall.rs
static/: main.css
