[package]
name = "wasm"
description = "ascii game"
version = "0.1.0"
categories = ["wasm"]
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"]}
console_error_panic_hook = "0.1.7"
rand = "0.8.4"
getrandom = { version = "0.2.3", features = ["js"] }
futures = "0.3.30"
wasm-bindgen-futures = "0.4.43"
serde = {version = "1.0.201", features = ["derive"] }
anyhow = "1.0.83"
async-trait = "0.1.80"
js-sys = "0.3.70"
strum = "0.24"
strum_macros = "0.24"

[dependencies.web-sys]
version = "0.3.69"
features = ["console",
            "Window",
            "Document",
            "HtmlCanvasElement",
            "HtmlInputElement",
            "CanvasRenderingContext2d",
            "InputEvent",
            "HtmlImageElement",
            "Response",
            "Performance",
            "KeyboardEvent",
            "AudioContext",
            "AudioBuffer",
            "AudioBufferSourceNode",
            "AudioDestinationNode",
            "AudioBufferOptions",
            ]